--- a/RimMonitor Work Tab/RimMonitor Work Tab.csproj
+++ b/RimMonitor Work Tab/RimMonitor Work Tab.csproj
@@ -18,7 +18,6 @@
   <ItemGroup>
     <None Remove="Web\Assets\passion_major.png" />
     <None Remove="Web\Assets\passion_minor.png" />
-    <None Remove="Web\WorkTab\Body\ColonistRow\WorkCells\worktab.html" />
     <None Remove="Web\WorkTab\worktab.interaction.js" />
     <None Remove="Web\WorkTab\worktab.priority.js" />
     <None Remove="Web\WorkTab\worktab.render.js" />
@@ -57,8 +56,7 @@
 
 <ItemGroup>
   <Folder Include="Util\" />
-  <Folder Include="Web\WorkTab\Body\ColonistRow\ColonistIdentity\" />
-  <Folder Include="Web\WorkTab\Body\ColonistRow\WorkCells\" />
+  <Folder Include="Web\WorkTab\Body\" />
   <Folder Include="Web\WorkTab\Header\" />
 </ItemGroup>
 
